--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона</title>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
+  <div class="general-background">
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
@@ -31,7 +35,9 @@
 
   <main class="container">
     <h1 class="visually">Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
+    <div class="promo">
     <img src="img/welcome-sedona.png" width="459" height="353" alt="Welcome to  the gorgeous Sedona!">
+    </div>
     <section class="features">
       <h2 class="visually-features">Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</h2>
 
@@ -109,53 +115,56 @@
     <section class="booking">
       <h2>Заинтересовались?</h2>
       <p class="booking-info">
-        Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне.
+        Укажите предпологаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне.
       </p>
-      <button type="button" class="search-booking"> Поиск гостиниц в Седоне</button>
+      <button type="button" class="button-search"> ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
 
 
+      <div class="search form">
       <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
         <p class="appointment-item">
-          <label for="appointment-form-arrival">Дата заезда:</label>
-            <input type="text" name="arrival" value="" placeholder="24 апреля 2017" id="appointment-form-arrival">
+          <label for="appointment-form-arrival" class="please">Дата заезда:</label>
+            <input class="input-field" type="text" name="arrival" value="" placeholder="24 АПРЕЛЯ 2017" id="appointment-form-arrival">
             <button class="icon-calendar" type="button">
               <span class="visually-hidden"> Выберите даты заезда </span>
                 <!--  Тут будет СВГ иконка, просто скопировать не получилось -->
             </button>
         </p>
         <p class="appointment-item">
-          <label for="appointment-form-departure">Дата выезда:</label>
-            <input type="text" name="departure" value="" placeholder="4 июля 2017" id="appointment-form-departure">
+          <label for="appointment-form-departure" class="please">Дата выезда:</label>
+            <input class="input-field" type="text" name="departure" value="" placeholder="4 ИЮЛЯ 2017" id="appointment-form-departure">
             <button class="icon-calendar" type="button">
               <span class="visually-hidden"> Выберите даты выезда </span>
                 <!--  Тут будет СВГ иконка, просто скопировать не получилось -->
             </button>
         </p>
         <p class="appointment-item">
-          <label for="appointment-form-adults">Взрослые:</label>
+          <label for="appointment-form-adults" class="please">Взрослые:</label>
             <button class="btn-minus-icon" type="button">
               <span class="visually-hidden">Уменьшаем количество взрослых</span>
             </button>
-            <input type="text" name="adults" value="" placeholder="2" id="appointment-form-adults">
+            <input class="input-field days" type="text" name="adults" value="" placeholder="2" id="appointment-form-adults">
             <button class="btn-plus-icon" type="button">
               <span class="visually-hidden">Увеличиваем количество взрослых</span>
             </button>
         </p>
         <p class="appointment-item">
-          <label for="appointment-form-children">Дети:</label>
+          <label for="appointment-form-children" class="please">Дети:</label>
             <button class="btn-minus-icon" type="button">
               <span class="visually-hidden">Уменьшаем количество детей</span>
             </button>
-            <input type="text" name="children" value="" placeholder="0" id="appointment-form-children">
+            <input class="input-field days" type="text" name="children" value="" placeholder="0" id="appointment-form-children">
             <button class="btn-plus-icon" type="button">
               <span class="visually-hidden">Увеличиваем количество детей</span>
             </button>
         </p>
-        <button class="button" type="submit">Найти </button>
+        <button class="button-blue" type="submit" > Найти </button>
       </form>
+      </div>
 
     </section>
   </main>
+
   <footer class="main-footer">
     <div class="footer-hashtag">
       #VISITSEDONA
@@ -174,9 +183,10 @@
       </ul>
     </div>
     <p class="footer-copyright">
-      <a href="https://up.htmlacademy.ru/htmlcss/22"> <span class="visually-hidden">Разработано HTML Academy</span></a>
+      <a class="copyright-button" href="https://up.htmlacademy.ru/htmlcss/22"> <span class="visually-hidden">Разработано HTML Academy</span></a>
     </p>
   </footer>
+</div>
 </body>
 
 </html>
