Добавляет флекбокс в шапку

--- a/index.html
+++ b/index.html
@@ -11,29 +11,31 @@
 
 <body>
   <div class="general-background">
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo">
-        <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип СЕДОНА">
-      </a>
-      <ul class="site-navigation">
-        <li>
-          <a href="#">Информация</a>
-        </li>
-        <li>
-          <a href="#">Фото и Видео</a>
-        </li>
-        <li>
-          <a href="#">Карта штата</a>
-        </li>
-        <li>
-          <a href="catalog.html">Гостиницы</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+    <header class="main-header">
 
-  <main class="container">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+        <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип СЕДОНА">
+        </a>
+        <ul class="site-navigation">
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li>
+            <a href="#">Фото и Видео</a>
+          </li>
+          <li>
+            <a href="#">Карта штата</a>
+          </li>
+          <li>
+            <a href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+      </nav>
+
+    </header>
+
+    <!-- <main class="container">
     <h1 class="visually">Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
     <div class="promo">
     <img src="img/welcome-sedona.png" width="459" height="353" alt="Welcome to  the gorgeous Sedona!">
@@ -132,7 +134,7 @@
             <button class="icon-calendar" type="button">
               <span class="visually-hidden"> Выберите даты заезда </span>
                 <!--  Тут будет СВГ иконка, просто скопировать не получилось -->
-            </button>
+    <!--</button>
         </p>
         <p class="appointment-item">
           <label for="appointment-form-departure" class="please">Дата выезда:</label>
@@ -140,7 +142,7 @@
             <button class="icon-calendar" type="button">
               <span class="visually-hidden"> Выберите даты выезда </span>
                 <!--  Тут будет СВГ иконка, просто скопировать не получилось -->
-            </button>
+    <!--</button>
         </p>
         <p class="appointment-item">
           <label for="appointment-form-adults" class="please">Взрослые:</label>
@@ -192,8 +194,8 @@
       </p>
       <a href="https://up.htmlacademy.ru/htmlcss/22"><span class="visually-hidden">Разработано HTML Academy</span></a>
     </div>
-  </footer>
-</div>
+  </footer> -->
+  </div>
 </body>
 
 </html>
