--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип СЕДОНА">
         </a>
         <ul class="site-navigation">
-          <li>
+          <li class="left-column">
             <a href="#">Информация</a>
           </li>
-          <li>
+          <li class="left-column indent">
             <a href="#">Фото и Видео</a>
           </li>
-          <li>
+          <li class="right-column">
             <a href="#">Карта штата</a>
           </li>
-          <li>
+          <li class="right-column">
             <a href="catalog.html">Гостиницы</a>
           </li>
         </ul>
@@ -35,166 +35,173 @@
 
     </header>
 
-    <!-- <main class="container">
-    <h1 class="visually">Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
-    <div class="promo">
-    <img src="img/welcome-sedona.png" width="459" height="353" alt="Welcome to  the gorgeous Sedona!">
-    </div>
-    <section class="features">
-      <h2 class="visually-features">Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</h2>
+    <main class="container">
+      <div class="promo">
+        <img src="img/welcome-sedona.png" width="459" height="353" alt="Welcome to  the gorgeous Sedona!">
+      </div>
 
-      <ul class="features-list">
+        <section class="features">
 
-        <li class="features-item">
-          <h3>Настоящий городок</h3>
-          <img src="img/1-pic.jpg" width="800" height="401" alt="Фотография города">
-          <p>
-            №1
-          </p>
-          <p>
-            Седона не атракцион для туристов, там течет своя жизнь
-          </p>
-          <ul class="features-item-recommendations">
-            <li class="item-recommendations">
-              <h4>Жилье</h4>
+          <div class="cause">
+
+            <h1 class="visually">Седона - небольшой городок в Аризоне, заслуживающий большего</h1>
+
+            <h2 class="visually-features">Рассмотрим пять причин, по которым Седона круче, чем Гранд Каньон!</h2>
+
+          </div>
+
+          <ul class="features-list">
+
+            <li class="features-item">
+              <h3>Настоящий городок</h3>
+              <img src="img/1-pic.jpg" width="800" height="256" alt="Фотография города">
               <p>
-                Рекомендуем пожить в настоящем мотеле, все как в кино!
+                №1
+              </p>
+              <p>
+                Седона не атракцион для туристов, там течет своя жизнь
+              </p>
+              <ul class="features-item-recommendations">
+                <li class="item-recommendations">
+                  <h4>Жилье</h4>
+                  <p>
+                    Рекомендуем пожить в настоящем мотеле, все как в кино!
+                  </p>
+                </li>
+                <li class="item-recommendations">
+                  <h4>Еда</h4>
+                  <p>
+                    Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+                  </p>
+                </li>
+                <li class="item-recommendations">
+                  <h4>Сувениры</h4>
+                  <p>
+                    Не только китайского, но и местного производства!
+                  </p>
+                </li>
+              </ul>
+            </li>
+            <li class="features-item">
+              <h3>Там есть мост дьявола</h3>
+              <img src="img/2-pic.jpg" width="800" height="400" alt="Фотография моста">
+              <p>
+                №2
+              </p>
+              <p>
+                Да, по нему можно пройти! Если конечно вы осмелитесь
               </p>
             </li>
-            <li class="item-recommendations">
-              <h4>Еда</h4>
+            <li class="features-item">
+              <h3>Небольшая площадь</h3>
               <p>
-                Всегда заказывайте фирменный бургер, вы не разочаруетесь!
+                №3
+              </p>
+              <p>
+                Все достопримичательности находятся очень близко
               </p>
             </li>
-            <li class="item-recommendations">
-              <h4>Сувениры</h4>
+            <li class="features-item">
+              <h3>Красивая дорога</h3>
               <p>
-                Не только китайского, но и местного производства!
+                №4
+              </p>
+              <p>
+                Ехать в Седону из Лас-Вегаса совсем не скучно!
+              </p>
+            </li>
+            <li class="features-item">
+              <h3>Мало туристов</h3>
+              <p>
+                №5
+              </p>
+              <p>
+                Большинство едет в Гранд Каньон и толпится там
               </p>
             </li>
           </ul>
-        </li>
-        <li class="features-item">
-          <h3>Там есть мост дьявола</h3>
-          <img src="img/2-pic.jpg" width="800" height="400" alt="Фотография моста">
-          <p>
-            №2
-          </p>
-          <p>
-            Да, по нему можно пройти! Если конечно вы осмелитесь
-          </p>
-        </li>
-        <li class="features-item">
-          <h3>Небольшая площадь</h3>
-          <p>
-            №3
-          </p>
-          <p>
-            Все достопримичательности находятся очень близко
-          </p>
-        </li>
-        <li class="features-item">
-          <h3>Красивая дорога</h3>
-          <p>
-            №4
-          </p>
-          <p>
-            Ехать в Седону из Лас-Вегаса совсем не скучно!
-          </p>
-        </li>
-        <li class="features-item">
-          <h3>Мало туристов</h3>
-          <p>
-            №5
-          </p>
-          <p>
-            Большинство едет в Гранд Каньон и толпится там
-          </p>
-        </li>
-      </ul>
-    </section>
-    <section class="booking">
+        </section>
+        <section class="booking">
 
-      <div class="search">
+          <div class="search">
 
-      <h2>Заинтересовались?</h2>
-      <p class="booking-info">
-        Укажите предпологаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне.
+            <h2>Заинтересовались?</h2>
+            <p class="booking-info">
+              Укажите предпологаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне.
       </p>
-      <button type="button" class="button-search"> ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
-      </div>
+              <button type="button" class="button-search"> ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</button>
+          </div>
 
 
-      <div class="search form">
-      <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
-        <p class="appointment-item">
-          <label for="appointment-form-arrival" class="please">Дата заезда:</label>
-            <input class="input-field" type="text" name="arrival" value="" placeholder="24 апреля 2017" id="appointment-form-arrival">
-            <button class="icon-calendar" type="button">
+          <div class="search form">
+            <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
+              <p class="appointment-item">
+                <label for="appointment-form-arrival" class="please">Дата заезда:</label>
+                <input class="input-field" type="text" name="arrival" value="" placeholder="24 апреля 2017" id="appointment-form-arrival">
+                <button class="icon-calendar" type="button">
               <span class="visually-hidden"> Выберите даты заезда </span>
                 <!--  Тут будет СВГ иконка, просто скопировать не получилось -->
-    <!--</button>
-        </p>
-        <p class="appointment-item">
-          <label for="appointment-form-departure" class="please">Дата выезда:</label>
-            <input class="input-field" type="text" name="departure" value="" placeholder="4 июля 2017" id="appointment-form-departure">
-            <button class="icon-calendar" type="button">
+    </button>
+              </p>
+              <p class="appointment-item">
+                <label for="appointment-form-departure" class="please">Дата выезда:</label>
+                <input class="input-field" type="text" name="departure" value="" placeholder="4 июля 2017" id="appointment-form-departure">
+                <button class="icon-calendar" type="button">
               <span class="visually-hidden"> Выберите даты выезда </span>
                 <!--  Тут будет СВГ иконка, просто скопировать не получилось -->
-    <!--</button>
-        </p>
-        <p class="appointment-item">
-          <label for="appointment-form-adults" class="please">Взрослые:</label>
-            <button class="btn-minus-icon" type="button">
+    </button>
+              </p>
+              <p class="appointment-item">
+                <label for="appointment-form-adults" class="please">Взрослые:</label>
+                <button class="btn-minus-icon" type="button">
               <span class="visually-hidden">Уменьшаем количество взрослых</span>
             </button>
-            <input class="input-field days" type="text" name="adults" value="" placeholder="2" id="appointment-form-adults">
-            <button class="btn-plus-icon" type="button">
+                <input class="input-field days" type="text" name="adults" value="" placeholder="2" id="appointment-form-adults">
+                <button class="btn-plus-icon" type="button">
               <span class="visually-hidden">Увеличиваем количество взрослых</span>
             </button>
-        </p>
-        <p class="appointment-item">
-          <label for="appointment-form-children" class="please">Дети:</label>
-            <button class="btn-minus-icon" type="button">
+              </p>
+              <p class="appointment-item">
+                <label for="appointment-form-children" class="please">Дети:</label>
+                <button class="btn-minus-icon" type="button">
               <span class="visually-hidden">Уменьшаем количество детей</span>
             </button>
-            <input class="input-field days" type="text" name="children" value="" placeholder="0" id="appointment-form-children">
-            <button class="btn-plus-icon" type="button">
+                <input class="input-field days" type="text" name="children" value="" placeholder="0" id="appointment-form-children">
+                <button class="btn-plus-icon" type="button">
               <span class="visually-hidden">Увеличиваем количество детей</span>
             </button>
-        </p>
-        <button class="button-blue" type="submit" > Найти </button>
-      </form>
+              </p>
+              <button class="button-blue" type="submit" > Найти </button>
+            </form>
+          </div>
+
+        </section>
+    </main>
+
+    <footer class="main-footer">
+      <div class="footer-hashtag">
+        #VISITSEDONA
       </div>
-
-    </section>
-  </main>
-
-  <footer class="main-footer">
-    <div class="footer-hashtag">
-      #VISITSEDONA
-    </div>
-    <div class="footer-social">
-      <ul>
-        <li>
-          <a class="social-button" href="#"><span class="visually-hidden">Подписывайтесь в Twitter!</span></a>
-        </li>
-        <li>
-          <a class="social-button" href="#"><span class="visually-hidden">Присоединяйтесь в Facebook</span></a>
-        </li>
-        <li>
-          <a class="social-button" href="#"><span class="visually-hidden">Смотрите нас на Youtube</span></a>
-        </li>
-      </ul>
-    </div>
-    <div class="footer-copyright">
-      <p>
-        Website by
-      </p>
-      <a href="https://up.htmlacademy.ru/htmlcss/22"><span class="visually-hidden">Разработано HTML Academy</span></a>
-    </div>
-  </footer> -->
+      <div class="footer-social">
+        <ul>
+          <li>
+            <a class="social-button" href="#"><span class="visually-hidden">Подписывайтесь в Twitter!</span></a>
+          </li>
+          <li>
+            <a class="social-button" href="#"><span class="visually-hidden">Присоединяйтесь в Facebook</span></a>
+          </li>
+          <li>
+            <a class="social-button" href="#"><span class="visually-hidden">Смотрите нас на Youtube</span></a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-copyright">
+        <p>
+          Website by
+        </p>
+        <a href="https://up.htmlacademy.ru/htmlcss/22"><span class="visually-hidden">Разработано HTML Academy</span></a>
+      </div>
+    </footer>
   </div>
 </body>
 
