Добавляет сетку преимуществ

--- a/index.html
+++ b/index.html
@@ -53,14 +53,26 @@
           <ul class="features-list">
 
             <li class="features-item">
-              <h3>Настоящий городок</h3>
-              <img src="img/1-pic.jpg" width="800" height="256" alt="Фотография города">
-              <p>
-                №1
-              </p>
-              <p>
-                Седона не атракцион для туристов, там течет своя жизнь
-              </p>
+
+              <div class="features-item-container">
+
+                <div class="features-item-text-container">
+                  <h3>Настоящий городок</h3>
+                  <p>
+                    - №1 -
+                  </p>
+                  <p>
+                    Седона не атракцион для туристов, там течет своя жизнь
+                  </p>
+                </div>
+
+              <div class="features-item-img-container">
+              <img src="img/1-pic.jpg" width="800" height="400" alt="Фотография города">
+              </div>
+
+              </div>
+
+
               <ul class="features-item-recommendations">
                 <li class="item-recommendations">
                   <h4>Жилье</h4>
@@ -83,19 +95,31 @@
               </ul>
             </li>
             <li class="features-item">
+
+              <div class="features-item-container">
+                <div class="features-item-text-container">
+
               <h3>Там есть мост дьявола</h3>
-              <img src="img/2-pic.jpg" width="800" height="400" alt="Фотография моста">
               <p>
-                №2
+                - №2 -
               </p>
               <p>
                 Да, по нему можно пройти! Если конечно вы осмелитесь
               </p>
+              </div>
+
+              <div class="features-item-img-container">
+              <img src="img/2-pic.jpg" width="800" height="400" alt="Фотография моста">
+              </div>
+                </div>
             </li>
+
+            <div class="last-features">
+
             <li class="features-item">
               <h3>Небольшая площадь</h3>
               <p>
-                №3
+                - №3 -
               </p>
               <p>
                 Все достопримичательности находятся очень близко
@@ -104,7 +128,7 @@
             <li class="features-item">
               <h3>Красивая дорога</h3>
               <p>
-                №4
+                - №4 -
               </p>
               <p>
                 Ехать в Седону из Лас-Вегаса совсем не скучно!
@@ -113,14 +137,16 @@
             <li class="features-item">
               <h3>Мало туристов</h3>
               <p>
-                №5
+                - №5 -
               </p>
               <p>
                 Большинство едет в Гранд Каньон и толпится там
               </p>
             </li>
+            </div>
           </ul>
         </section>
+
         <section class="booking">
 
           <div class="search">
