--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     - №1 -
                   </p>
                   <p>
-                    Седона не атракцион для туристов, там течет своя жизнь
+                    Седона - не атракцион для туристов, там течет своя жизнь
                   </p>
                 </div>
 
@@ -99,7 +99,7 @@
               <div class="features-item-container">
                 <div class="features-item-text-container">
 
-              <h3>Там есть мост дьявола</h3>
+              <h3>Там есть<br> мост дьявола</h3>
               <p>
                 - №2 -
               </p>
@@ -159,44 +159,55 @@
           </div>
 
 
-          <div class="search form">
+          <div class="search-form">
             <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
               <p class="appointment-item">
-                <label for="appointment-form-arrival" class="please">Дата заезда:</label>
+                <label for="appointment-form-arrival" class="arrival">Дата заезда:</label>
                 <input class="input-field" type="text" name="arrival" value="" placeholder="24 апреля 2017" id="appointment-form-arrival">
-                <button class="icon-calendar" type="button">
+                <!-- <button class="icon-calendar" type="button"> -->
               <span class="visually-hidden"> Выберите даты заезда </span>
                 <!--  Тут будет СВГ иконка, просто скопировать не получилось -->
     </button>
               </p>
               <p class="appointment-item">
-                <label for="appointment-form-departure" class="please">Дата выезда:</label>
+                <label for="appointment-form-departure" class="departure">Дата выезда:</label>
                 <input class="input-field" type="text" name="departure" value="" placeholder="4 июля 2017" id="appointment-form-departure">
-                <button class="icon-calendar" type="button">
+                <!-- <button class="icon-calendar" type="button"> -->
               <span class="visually-hidden"> Выберите даты выезда </span>
                 <!--  Тут будет СВГ иконка, просто скопировать не получилось -->
     </button>
               </p>
+              <div class="line-input">
+                <div class="adulta-line-input">
+
               <p class="appointment-item">
                 <label for="appointment-form-adults" class="please">Взрослые:</label>
-                <button class="btn-minus-icon" type="button">
+                <!-- <button class="btn-minus-icon" type="button"> -->
               <span class="visually-hidden">Уменьшаем количество взрослых</span>
             </button>
                 <input class="input-field days" type="text" name="adults" value="" placeholder="2" id="appointment-form-adults">
-                <button class="btn-plus-icon" type="button">
+                <!-- <button class="btn-plus-icon" type="button"> -->
               <span class="visually-hidden">Увеличиваем количество взрослых</span>
             </button>
               </p>
+              </div>
+
+             <div class="children-line-input">
+
               <p class="appointment-item">
                 <label for="appointment-form-children" class="please">Дети:</label>
-                <button class="btn-minus-icon" type="button">
+                <!-- <button class="btn-minus-icon" type="button"> -->
               <span class="visually-hidden">Уменьшаем количество детей</span>
             </button>
                 <input class="input-field days" type="text" name="children" value="" placeholder="0" id="appointment-form-children">
-                <button class="btn-plus-icon" type="button">
+                <!-- <button class="btn-plus-icon" type="button"> -->
               <span class="visually-hidden">Увеличиваем количество детей</span>
             </button>
+
               </p>
+              </div>
+              </div>
+
               <button class="button-blue" type="submit" > Найти </button>
             </form>
           </div>
